--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello</h1>
     <h2>Terminal</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae animi repudiandae eaque cumque atque nobis perspiciatis optio omnis deserunt, fugit sint, nemo error illo quod ipsum magnam earum debitis tempore!</p>
 </body>
 </html>
